fix: stop departure date header overlapping table column headers

--- a/frontend/css/_base.scss
+++ b/frontend/css/_base.scss
@@ -1329,8 +1329,9 @@ input:not(:checked) + label {
     }
 
     h3 {
-        margin: 1em 0 -1em;
+        margin: 1em 0 0;
     }
+
     p {
         margin: .5em 0;
     }
